src/inspector/injected-script.cc
@@ -302,12 +302,9 @@ Response InjectedScript::getProperties(
     Response response;
     std::unique_ptr<RemoteObject> remoteObject;
     if (mirror.value) {
-      response =
-          mirror.value->buildRemoteObject(context, wrapMode, &remoteObject);
-      if (!response.isSuccess()) return response;
-      response =
-          bindRemoteObjectIfNeeded(sessionId, context, mirror.value->v8Value(),
-                                   groupName, remoteObject.get());
+      response = wrapObjectMirror(*mirror.value, groupName, wrapMode,
+                                  v8::MaybeLocal<v8::Value>(),
+                                  kMaxCustomPreviewDepth, &remoteObject);
       if (!response.isSuccess()) return response;
       descriptor->setValue(std::move(remoteObject));
       descriptor->setWritable(mirror.writable);
@@ -411,12 +408,23 @@ Response InjectedScript::wrapObject(
     std::unique_ptr<protocol::Runtime::RemoteObject>* result) {
   v8::Local<v8::Context> context = m_context->context();
   v8::Context::Scope contextScope(context);
+  std::unique_ptr<ValueMirror> mirror = ValueMirror::create(context, value);
+  if (!mirror) return Response::InternalError();
+  return wrapObjectMirror(*mirror, groupName, wrapMode, customPreviewConfig,
+                          maxCustomPreviewDepth, result);
+}
+
+Response InjectedScript::wrapObjectMirror(
+    const ValueMirror& mirror, const String16& groupName, WrapMode wrapMode,
+    v8::MaybeLocal<v8::Value> customPreviewConfig, int maxCustomPreviewDepth,
+    std::unique_ptr<protocol::Runtime::RemoteObject>* result) {
   int customPreviewEnabled = m_customPreviewEnabled;
   int sessionId = m_sessionId;
-  auto obj = ValueMirror::create(m_context->context(), value);
-  if (!obj) return Response::InternalError();
-  Response response = obj->buildRemoteObject(context, wrapMode, result);
+  v8::Local<v8::Context> context = m_context->context();
+  v8::Context::Scope contextScope(context);
+  Response response = mirror.buildRemoteObject(context, wrapMode, result);
   if (!response.isSuccess()) return response;
+  v8::Local<v8::Value> value = mirror.v8Value();
   response = bindRemoteObjectIfNeeded(sessionId, context, value, groupName,
                                       result->get());
   if (!response.isSuccess()) return response;
